Python console: incorrect cursor position with wrapped lines #73784

Closed
opened 2020-02-13 21:27:37 +01:00 by Ankit Meel · 9 comments
Member

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.9.22

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-13 17:12, hash: b6572c5430

Short description of error
image.png
cursor doesn't go beyond 3 characters per lines you add in the console. This problem shows up like this:
{F8338294, layout=inline}{F8338297, layout=inline}{F8338299, layout=inline}{F8338301, layout=inline}{F8338304, layout=inline}

Exact steps for others to reproduce the error
On default setup, change one of the editors in the sidebar to Python Console. I chose outliner, but properties panel is fine too, as long as it is thin.
Keep typing till it starts wrapping - incorrectly.

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.9.22 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-13 17:12, hash: `b6572c5430` **Short description of error** ![image.png](https://archive.blender.org/developer/F8338288/image.png) cursor doesn't go beyond 3 characters per lines you add in the console. This problem shows up like this: {[F8338294](https://archive.blender.org/developer/F8338294/image.png), layout=inline}{[F8338297](https://archive.blender.org/developer/F8338297/image.png), layout=inline}{[F8338299](https://archive.blender.org/developer/F8338299/image.png), layout=inline}{[F8338301](https://archive.blender.org/developer/F8338301/image.png), layout=inline}{[F8338304](https://archive.blender.org/developer/F8338304/image.png), layout=inline} **Exact steps for others to reproduce the error** On default setup, change one of the editors in the sidebar to Python Console. I chose outliner, but properties panel is fine too, as long as it is thin. Keep typing till it starts wrapping - incorrectly.
Author
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

And keeps increasing on each new line. 3, 6, 9, 12....

2020-02-13_21-40-01.gif

And keeps increasing on each new line. 3, 6, 9, 12.... ![2020-02-13_21-40-01.gif](https://archive.blender.org/developer/F8338338/2020-02-13_21-40-01.gif)
Harley Acheson was assigned by Campbell Barton 2020-02-14 01:00:27 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton changed title from Python console: cursor doesn't go till the end of the text to Python console: incorrect cursor position with wrapped lines 2020-02-14 01:01:01 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by aa919f3e82

Caused by aa919f3e82
Member

Yes, looking at that now. Thanks!

Yes, looking at that now. Thanks!

This issue was referenced by 69be8039e8

This issue was referenced by 69be8039e80f55760ddc652bf79240d9d5ab38bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73784
No description provided.