Fix T73784: Python console: incorrect wrapped line cursor position

Regression in aa919f3e82020

Remove character margins, it complicated drawing & picking
to have one margin in pixels and a second margin in characters.

Replace this with an outer pixel-margin for drawing background colors.